--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="map"></div>
     <div id="footer">
         <div id="settings">Settings</div>
-        <div id="dropzone">Drop File here</div>
+        <div id="dropzone" ondrop="drop(event);" ondragover="dragOver(event)" ondragend="dragEnd(event)">Drop File here</div>
 
     </div>
 
@@ -52,15 +52,61 @@
 
     <script src="leaflet.js"></script>
     <script src="wsjt-parser.js"></script>
+
+    <!-- debug -->
+    <script src="vars.js"></script>
+
+
     <!-- for the time being, externalize later -->
     <script>
-        var map = L.map('map').setView([51.505, -0.09], 13);
+        var map = L.map('map').setView([47.18926, 8.17503], 10);
         L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiZm94dHJvdHQxMiIsImEiOiJjamMzamRmd3gwdDI5MzNyNmYyYzR3MXo2In0.zliegd2CbZ_LzzShoSQCvw', {
             attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
             maxZoom: 18,
             id: 'mapbox.streets',
-            accessToken: 'your.mapbox.access.token'
+            accessToken: 'pk.eyJ1IjoiZm94dHJvdHQxMiIsImEiOiJjamMzamRmd3gwdDI5MzNyNmYyYzR3MXo2In0.zliegd2CbZ_LzzShoSQCvw'
         }).addTo(map);
+
+        function dragOver(ev) {
+            ev.preventDefault();
+        }
+
+        function dragEnd(ev) {
+            ev.preventDefault();
+        }
+
+        //handler for the drop and drag
+         function drop(ev) {
+            ev.preventDefault();
+            console.log("Dropped file");
+
+             // If dropped items aren't files, reject them
+            var dt = ev.dataTransfer;
+            if (dt.items) {
+                // Use DataTransferItemList interface to access the file(s)
+                for (var i=0; i < dt.items.length; i++) {
+                    if (dt.items[i].kind == "file") {
+                        var f = dt.items[i].getAsFile();
+                        console.log("... file[" + i + "].name = " + f.name);
+                        parseDroppedFile(f);
+                    }
+                }
+            } else {
+                // Use DataTransfer interface to access the file(s)
+                for (var i=0; i < dt.files.length; i++) {
+                    console.log("... file[" + i + "].name = " + dt.files[i].name);
+                    parseDroppedFile(f);
+                }
+            }
+        }
+
+        function parseDroppedFile(file){
+            console.log("Parsing dropped file");
+        }
+
+        var res1 = wsjt_partition_log(log1);
+        console.log(res1);
+
     </script>
 
 </body>
