--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                     if (dt.items[i].kind == "file") {
                         var f = dt.items[i].getAsFile();
                         console.log("... file[" + i + "].name = " + f.name);
-                        readDroppedFile(f);
+                        parseDroppedFile(f);
                     }
                 }
             } else {
                 // Use DataTransfer interface to access the file(s)
                 for (var i=0; i < dt.files.length; i++) {
                     console.log("... file[" + i + "].name = " + dt.files[i].name);
-                    readDroppedFile(f);
+                    parseDroppedFile(f);
                 }
             }
         }
