added bootstrap for some nice GUI because otherwise we are too stupid for this

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>FIXME</title>
 
 
-    <!-- <link rel="stylesheet" href="normalize.css"> -->
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="leaflet.css">
 
     <!-- for the time being, externalize later -->
