--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
         //var testMarker = L.marker.cakeMarker([47.18926, 8.17503],{pieces: [[180,"#F00"],[30, "#0F0"],[40, "#00F"],[50,"#F0F"]]})
         //var testMarker2 = L.marker.cakeMarker([47.59926, 8.17503],{pieces: [[180,"#00F"]]})
 
-        testMarker.addTo(map);
-        testMarker2.addTo(map);
+        //testMarker.addTo(map);
+        //testMarker2.addTo(map);
 
 
         // FOR YOUR PLEASURE
