small layout fixes

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <body>
 <div class="container-fluid" id="container">
     <div class="row">
-    <div id="map" class="col-md-10"></div>
-    <div id="sidebar" class="col-md-2">
+    <div id="map" class="col-8 col-sm-8 col-md-8 col-lg-9 col-xl-9"></div>
+    <div id="sidebar" class="col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3">
         <div class="card" id="infocard">
             <div class="card-body">
                 <h5 class="card-title">WSJT Diff</h5>
