--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         #dropzone-center{
             height: 60px;
         }
-        #dropzone.active{
-            border-style: solid;
-            border-color: #35a2ff;
-            background-color: #bfe3ff;
-            color: #0001ff
+        .comp-control-parent{
+            border-radius: 5px;
+            opacity: 1;
+            border: 10px solid rgba(255, 255, 255, .8);
+        }
+        .comp-control-parent>.btn{
+            opacity: 1;
         }
     </style>
 
@@ -75,6 +77,7 @@
 
     <!-- debug -->
 <script src="leaflet.js"></script>
+<script src="comparator-control.js"></script>
 <script src="cake-marker.js"></script>
 <script src="wsjt-parser.js"></script>
 <script src="representations.js"></script>
@@ -84,18 +87,28 @@
 
     <!-- for the time being, externalize later -->
     <script>
-        var map = L.map('map').setView([47.18926, 8.17503], 10);
+        var map = L.map('map',{attributionControl:false}).setView([47.18926, 8.17503], 10);
         var tileLayer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiZm94dHJvdHQxMiIsImEiOiJjamMzamRmd3gwdDI5MzNyNmYyYzR3MXo2In0.zliegd2CbZ_LzzShoSQCvw', {
             attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
             maxZoom: 18,
             id: 'mapbox.streets',
             accessToken: 'pk.eyJ1IjoiZm94dHJvdHQxMiIsImEiOiJjamMzamRmd3gwdDI5MzNyNmYyYzR3MXo2In0.zliegd2CbZ_LzzShoSQCvw'
         });
+
+        var attribution = L.control.attribution({prefix: '<a href="https://github.com/mweyland/wsjt-diff" target="_blank" class="card-link">WSJT-Diff</a> | Leaflet'})
+        attribution.addTo(map)
+
         tileLayer.addTo(map);
+
 
         //needed if we use the LogRepresentation Class, so we can toggle layers...
         //var controls = L.control.layers({"Mapbox Base": tileLayer},{},{collapsed: false});
         //controls.addTo(map)
+
+        var compControl = L.control.comparatorControl();
+        compControl.addTo(map);
+        compControl.addLog("Test 1.txt");
+        compControl.addLog("Test 4.txt");
 
 
         var logComparator = new LogComparator("Log comparison");
@@ -159,7 +172,7 @@
 
             logComparator.addLog(wsjt_timeHashmap, name);
             //zoom map to bounds
-            map.fitBounds(log.getBounds());
+            //map.fitBounds(log.getBounds());
 
         }
 
@@ -176,6 +189,7 @@
         // FOR YOUR PLEASURE
         // COMMENT IN PRODUCTION
         parseText(log1, "Demo Log");
+
     </script>
 
 </body>
