sadly I have to inform you that I included jQuery to lessen my burden...

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         .comp-control-parent>.btn{
             opacity: 1;
         }
+        .loglinToggle{
+            border-top: 10px solid rgba(255, 255, 255, .8);
+            width: 100%;
+        }
+        .toggleBtn{
+            width: 50%;
+        }
     </style>
 
 </head>
@@ -84,6 +91,7 @@
 </div>
 
     <!-- debug -->
+<script src="jquery.js"></script>
 <script src="leaflet.js"></script>
 <script src="comparator-control.js"></script>
 <script src="cake-marker.js"></script>
